<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_view_style"
    tools:context="com.example.androidl.quizeapp.Question2Activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/q2_txt"
                style="@style/heading"
                android:text="@string/Q2"/>

            <ImageView
                android:id="@+id/q2_animal"
                style="@style/q_animal_image_style"
                android:layout_below="@id/q2_txt"
                android:contentDescription="@string/animal_image"
                android:src="@drawable/lion"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/q2_animal">
                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox1"
                        style="@style/radio_checkbox_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/checkboxQ1"/>
                    <ImageView
                        android:id="@+id/checkbox1_img"
                        style="@style/sign_image"
                        android:contentDescription="@string/correct_answer"
                        android:src="@drawable/right_answer"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox2"
                        style="@style/radio_checkbox_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/checkboxQ2"/>
                    <ImageView
                        android:id="@+id/checkbox2_img"
                        style="@style/sign_image"
                        android:contentDescription="@string/wrong_answer"
                        android:src="@drawable/wrong_answer"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox3"
                        style="@style/radio_checkbox_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/checkboxQ3"/>
                    <ImageView
                        android:id="@+id/checkbox3_img"
                        style="@style/sign_image"
                        android:contentDescription="@string/correct_answer"
                        android:src="@drawable/right_answer"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox4"
                        style="@style/radio_checkbox_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/checkboxQ4"/>
                    <ImageView
                        android:id="@+id/checkbox4_img"
                        style="@style/sign_image"
                        android:contentDescription="@string/wrong_answer"
                        android:src="@drawable/wrong_answer"
                        />
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/next_icon"
                style="@style/icon_style"
                android:contentDescription="@string/next_question"
                android:onClick="nextAnimal"/>

            <TextView
                android:id="@+id/check_textview"
                style="@style/check_style"
                android:onClick="checkQuestion2"
                android:text="@string/check"/>

            <TextView
                android:id="@+id/q2_score_textview"
                style="@style/check_style"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:onClick="showQ2Score"
                android:text="@string/score"
                android:visibility="invisible"/>
        </RelativeLayout>
</ScrollView>
