<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="com.example.androidl.quizeapp.Question3Activity">

            <TextView
                style="@style/mediumText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            android:text="@string/question3"/>

            <ImageView
            android:id="@+id/q3_animal_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="6"
            android:contentDescription="@string/animal_image"
            android:scaleType="centerInside"
            android:src="@drawable/lion"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:stretchColumns="0">

            <TableRow >

                <EditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="Enter The Animal Name"
                    android:padding="15dp"
                    android:textColor="@color/colorAccent"/>


                <ImageView
                    android:id="@+id/answer_sign_img"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/right_answer"
                    android:visibility="visible"/>
            </TableRow>

        </TableLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/q3_check_textview"
            style="@style/check_style"
            android:onClick="checkQuestion3"
            android:text="@string/check"/>

            <TextView
                android:id="@+id/q3_score_textview"
                style="@style/check_style"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:onClick="showQ3Score"
                android:text="score"
                android:visibility="invisible"/>

        <ImageView
            android:id="@+id/q3_next_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:onClick="q3NextAnimal"
            android:src="@drawable/next"
            android:visibility="visible"
            />
    </RelativeLayout>

</LinearLayout>
